--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
         "jrean/laravel-user-verification": "dev-master",
         "laravel/framework": "^8.0",
         "laravel/socialite": "^5.1",
